--- a/static/popup.html
+++ b/static/popup.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="preview">
-      <canvas id="area"></canvas>
+      <canvas width="640" height="480" id="canvas"></canvas>
     </div>
   </div>
   <script type="text/javascript" src="popup.js" crossorigin="anonymous"></script>
