Added playback time info

--- a/static/popup.html
+++ b/static/popup.html
@@ -27,8 +27,13 @@
         <div class="song-info">
           <div class="song-title"></div>
           <div class="artist"></div>
-          <div class="difficulty">
-            <div id="difficulty-name"></div>
+          <div class="other">
+            <div class="difficulty">
+              <div id="difficulty-name"></div>
+            </div>
+            <div class="playback">
+              <div id="playback-time"></div>
+            </div>
           </div>
         </div>
       </div>
