--- a/static/popup.html
+++ b/static/popup.html
@@ -37,6 +37,7 @@
           </div>
         </div>
       </div>
+      <div class="progress"></div>
     </div>
     <div class="preview">
       <canvas width="640" height="480" id="canvas"></canvas>
